# ch-indexing-service

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in
src/ch-ir-retrieval/: README.md  ch-ir-common.c  ch-ir-common.h  ch-ir-indexer-pvt.c  ch-ir-indexer-pvt.h  ch-ir-indexer-stopwords.c  ch-ir-indexer-stopwords.h  ch-ir-indexer-weights.c  ch-ir-indexer-weights.h  ch-ir-indexer.c  ch-ir-indexer.h  ch-ir-query-analyzer.c  ch-ir-query-analyzer.h  ch-ir-query-parser.c  ch-ir-query-parser.h  ch-ir-retrieval-main.c  porter.c  porter.h
src/client/: Makefile.am  Makefile.in  client.cpp
src/indexer/: es-client.cpp  es-client.hpp  indexer.cpp  indexer.hpp  main.cpp
