AM_CPPFLAGS = -I..
bin_PROGRAMS = ch-indexing-service
ch_indexing_service_SOURCES =  \
						ch-ir-retrieval/ch-ir-common.c\
						ch-ir-retrieval/ch-ir-indexer-pvt.c\
						ch-ir-retrieval/ch-ir-indexer-weights.c\
						ch-ir-retrieval/porter.c\
						ch-ir-retrieval/ch-ir-indexer.c\
						ch-ir-retrieval/ch-ir-indexer-stopwords.c\
						indexer/indexer.cpp\
						indexer/main.cpp

